@@ -1,5 +1,5 @@
 /* Return list of symbols the library can request.
-   Copyright (C) 2001, 2002, 2003 Free Software Foundation, Inc.
+   Copyright (C) 2001,2002,2003,2009 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@redhat.com>, 2001.
 
@@ -22,37 +22,13 @@
 #include <gnu/lib-names.h>
 #include "thread_dbP.h"
 
-
-#ifdef HAVE_ASM_GLOBAL_DOT_NAME
-# define DOT "."		/* PPC64 requires . prefix on code symbols.  */
-#else
-# define DOT			/* No prefix.  */
-#endif
-
 static const char *symbol_list_arr[] =
 {
-# define DB_STRUCT(type) \
-  [SYM_SIZEOF_##type] = "_thread_db_sizeof_" #type,
-# define DB_STRUCT_FIELD(type, field) \
-  [SYM_##type##_FIELD_##field] = "_thread_db_" #type "_" #field,
-# define DB_SYMBOL(name) \
-  [SYM_##name] = #name,
-# define DB_FUNCTION(name) \
-  [SYM_##name] = DOT #name,
-# define DB_VARIABLE(name) \
-  [SYM_##name] = #name, \
-  [SYM_DESC_##name] = "_thread_db_" #name,
-# include "structs.def"
-# undef DB_STRUCT
-# undef DB_FUNCTION
-# undef DB_SYMBOL
-# undef DB_VARIABLE
-
-  [SYM_TH_UNIQUE_CONST_THREAD_AREA] = "_thread_db_const_thread_area",
-  [SYM_TH_UNIQUE_REGISTER64] = "_thread_db_register64",
-  [SYM_TH_UNIQUE_REGISTER32] = "_thread_db_register32",
-  [SYM_TH_UNIQUE_REGISTER32_THREAD_AREA] = "_thread_db_register32_thread_area",
-  [SYM_TH_UNIQUE_REGISTER64_THREAD_AREA] = "_thread_db_register64_thread_area",
+# define DB_LOOKUP_NAME(idx, name)		[idx] = #name,
+# define DB_LOOKUP_NAME_TH_UNIQUE(idx, name)	[idx] = #name,
+# include "db-symbols.h"
+# undef	DB_LOOKUP_NAME
+# undef	DB_LOOKUP_NAME_TH_UNIQUE
 
   [SYM_NUM_MESSAGES] = NULL
 };
