@@ -1,3 +1,8 @@
+2009-02-27  Roland McGrath  <roland@redhat.com>
+
+	* Makeconfig (%.v.i): Depend on Makeconfig.
+	Exclude % lines from initial #-comment removal.
+
 2009-02-27  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/ko.po: Update from translation team.
